@@ -1,5 +1,12 @@
 2009-02-27  Alberto Garcia  <agarcia@igalia.com>
 
+	* src/hildon-window-stack.c (hildon_window_stack_push)
+	(hildon_window_stack_pop_and_push):
+	Don't forget to push/pop the first window.
+	Reverse the window list before calling _push_list()
+
+2009-02-27  Alberto Garcia  <agarcia@igalia.com>
+
 	* src/hildon-picker-button.h
 	* src/hildon-picker-button.c (hildon_picker_button_class_init):
 	Remove "value_changed" slot to avoid ABI breakage
